add <br> to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h1> Dayche DS career </h1>
 
 <a href="file">File</a>
-<a href="newfile">New File</a>
+</br><a href="newfile">New File</a>
 
 </body> </html>
