add master to index.html in Master branch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
 
 <h1> Dayche DS career </h1>
-
+<h3> I am branch Master </h3>
 <a href="file">File</a>
 </br><a href="newfile">New File</a>
 
