--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> <title> Home Page </title> </head>
  <body>
 
-<h1> Dayche DS career </h1>
+<h1> Dayche Deep career </h1>
 
 <a href="file">File</a>
 </br><a href="newfile">New File</a>
